some changes in font-family and bookmarks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="#joinus" class="f-nav-li">Join Us</a></li>
                     </ul>
                 </nav>
-                <h1 class="f-page-main pt-sm-200 pt-40"><span>Vitae nunc,</span> blandit a odio</h1>
+                <h1 class="f-page-main pt-sm-200 pt-40">Vitae nunc,<span class="f-main"> blandit a odio</span></h1>
                 <p class="f-header-semper">Semper in egestas risus id tempus. Pellentesque dolor eros sollicitudin
                     feugiat ut odio semper.
                     Mattis
@@ -43,11 +43,11 @@
         </div>
     </header>
     <!-- 1st section -->
-    <section class="bg-dark-blue overflow-hidden position-relative" id="minting z-2">
+    <section class="bg-dark-blue overflow-hidden position-relative z-1" id="minting">
         <div class="container ">
             <div class="row">
                 <div data-aos="fade-right" class="col-lg-6 col-12 ">
-                    <img src="./assets/images/image-gif.gif" alt="elephant-wearing-cap" class="w-100">
+                    <img src="./assets/images/image-gif.gif" alt="elephant-wearing-cap" class="w-100 ">
                 </div>
                 <div data-aos="fade-left"
                     class="col-lg-6 col-12 d-flex flex-column align-items-center justify-content-center ">
@@ -56,7 +56,7 @@
                     <p class="f-sql">Before 2 SOL</p>
                     <h3 class="f-minting">Whitelist: 0,88 SOL</h3>
                     <p class="f-sql">Before 1 SOL</p>
-                    <button class="f-comming-btn btn-comming mb-50">Comming Soon</button>
+                    <button class="f-comming-btn btn-comming mb-50 z-5">Comming Soon</button>
                     <div class="d-flex gap-20">
                         <a href="https://www.instagram.com/accounts/login/" class="z-3"><svg width="33" height="33"
                                 viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -149,12 +149,12 @@
                     </div>
                 </div>
             </div>
-            <img class="shadow-1 d-none d-lg-flex" src="./assets/images/elipse-shadow.png" alt="light-shadow">
+            <img class="shadow-1 d-none d-lg-flex z_1" src="./assets/images/elipse-shadow.png" alt="light-shadow">
             <img class="shadow-3 d-none d-lg-flex" src="./assets/images/elipse-shadow.png" alt="light-shadow">
         </div>
     </section>
     <!-- 2nd section -->
-    <section class="bg-dark-blue" id="roadmap position-relative overflow-hidden">
+    <section class="bg-dark-blue position-relative overflow-hidden z-5" id="roadmap">
         <div data-aos="zoom-out-right" class="container">
             <h2 class="f-section-main d-flex justify-content-center">Roadmap</h2>
             <div class="timeline">
